[package]
name = "my-project"
version = "0.1.0"
authors = ["raf181 <93051606+raf181@users.noreply.github.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
slint-build = "1.6"
